--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,16 +104,16 @@ img {
 
 .navbar .nav-link {
     font-weight: 800;
-    color: #efeaea;
+    color: #ffffff;
       
 }
 
 .navbar .nav-link:hover {
-    color: #391e2d;
+    color: #000000;
 }
 
 .navbar .nav-link.active {
-    color: #391e2d;
+    color: #000000;
 }
 
 @media (min-width: 992px) {
